--- a/src/preferences.ui
+++ b/src/preferences.ui
@@ -187,7 +187,96 @@
             </child>
           </object>
         </child>
-        <child>po
+        <child>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="can-target">True</property>
+            <property name="title" translatable="yes">Add Equation</property>
+            <property name="description" translatable="yes">Settings for the "Add Equation" option</property>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Y =</property>
+                <property name="subtitle" translatable="yes">The equation that is used to generate data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="addequation_equation">
+                    <property name="text">X</property>
+                    <property name="valign">center</property>
+                    <property name="max-width-chars">20</property>
+                    <property name="width-request">15</property>
+                  </object>
+                </child>
+              </object>
+            </child>            
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="can-target">True</property>
+                <property name="title" translatable="yes">X start</property>
+                <property name="subtitle" translatable="yes">The default value for the minimum X value</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="addequation_X_start">
+                    <property name="focus-on-click">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="can-target">True</property>
+                    <property name="text">0</property>
+                    <property name="valign">center</property>
+                    <property name="max-width-chars">20</property>
+                    <property name="width-request">15</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="can-target">True</property>
+                <property name="title" translatable="yes">X stop</property>
+                <property name="subtitle" translatable="yes">The default value for the maximum X value</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="addequation_X_stop">
+                    <property name="focus-on-click">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="can-target">True</property>
+                    <property name="text">10</property>
+                    <property name="valign">center</property>
+                    <property name="max-width-chars">20</property>
+                    <property name="width-request">15</property>"
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="can-target">True</property>
+                <property name="title" translatable="yes">Step Size</property>
+                <property name="subtitle" translatable="yes">The default step size</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="addequation_step_size">
+                    <property name="focus-on-click">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="can-target">True</property>
+                    <property name="text">0.01</property>
+                    <property name="valign">center</property>
+                    <property name="max-width-chars">20</property>
+                    <property name="width-request">15</property>
+                  </object>
+                </child>
+              </object>
+            </child>"                        
+          </object>
+        </child>        
+        <child>
           <object class="AdwPreferencesGroup">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
