--- a/src/open_special.ui
+++ b/src/open_special.ui
@@ -4,116 +4,112 @@
   <requires lib="libadwaita" version="1.0"/>
   <template class="AddEquationWindow" parent="AdwWindow">
     <property name="title">Add Equation</property>
-   <property name="default-width">256</property>
-  <property name="default-height">125</property>
-  <child>
-   <object class="GtkShortcutController">
+    <property name="default-width">256</property>
+    <property name="default-height">125</property>
     <child>
-     <object class="GtkShortcut">
-      <property name="trigger">Escape</property>
-      <property name="action">action(window.close)</property>
-     </object>
+      <object class="GtkShortcutController">
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">Escape</property>
+            <property name="action">action(window.close)</property>
+          </object>
+        </child>
+      </object>
     </child>
-   </object>
-  </child>
-  <child>
-   <object class="GtkBox">
-    <property name="orientation">vertical</property>
     <child>
-     <object class="GtkHeaderBar" id="header_bar">
-     </object>
+      <object class="GtkBox">
+      <property name="orientation">vertical</property>
+      <child>
+        <object class="GtkHeaderBar" id="header_bar"/>
       </child>
+      <child>
+        <object class="AdwActionRow">
+          <property name="visible">True</property>
+          <property name="can-focus">True</property>
+          <property name="title" translatable="yes">Delimiter</property>
+          <property name="subtitle" translatable="yes">The delimiter that separates the columns (\t for tab)</property>
+          <property name="use-underline">True</property>
           <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Delimiter</property>
-                <property name="subtitle" translatable="yes">The delimiter that separates the columns (\t for tab)</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="delimiter">
-                    <property name="text">\t</property>
-                    <property name="valign">center</property>
-                  </object>
-                </child>
-              </object>
-            </child>
+            <object class="GtkEntry" id="delimiter">
+              <property name="text">\t</property>
+              <property name="valign">center</property>
+            </object>
+          </child>
+        </object>
+      </child>
+      <child>
+        <object class="AdwActionRow">
+          <property name="visible">True</property>
+          <property name="can-focus">True</property>
+          <property name="title" translatable="yes">Decimal separator</property>
+          <property name="subtitle" translatable="yes">The character that is used as a decimal separator</property>
+          <property name="use-underline">True</property>
+          <child>
+            <object class="GtkEntry" id="decimal seperator">
+              <property name="text">.</property>
+              <property name="valign">center</property>
+            </object>
+          </child>
+        </object>
+      </child>
+      <child>
+        <object class="AdwActionRow">
+          <property name="visible">True</property>
+          <property name="can-focus">True</property>
+          <property name="title" translatable="yes">Column X</property>
+          <property name="subtitle" translatable="yes">Which column to load for the X-data</property>
+          <property name="use-underline">True</property>
+          <child>
+            <object class="GtkSpinButton" id ="column_x">
+              <property name="vexpand">False</property>
+              <property name="vexpand-set">False</property>
+              <property name="adjustment">spin_button_column_x</property>
+              <property name="numeric">True</property>
+              <property name="value">0</property>
+              <property name="wrap">True</property>
+            </object>
+          </child>
+        </object>
+      </child>
+      <child>
+        <object class="AdwActionRow">
+          <property name="visible">True</property>
+          <property name="can-focus">False</property>
+          <property name="vexpand">False</property>
+          <property name="title" translatable="yes">Column Y</property>
+          <property name="subtitle" translatable="yes">Which column to load for the Y-data</property>
+          <property name="use-underline">True</property>
+          <child>
+            <object class="GtkSpinButton" id ="column_y">
+              <property name="vexpand">False</property>
+              <property name="adjustment">spin_button_column_y</property>
+              <property name="numeric">True</property>
+              <property name="value">1</property>
+              <property name="wrap">True</property>
+            </object>
+          </child>
+        </object>
+      </child>
+        <child>
+          <object class="AdwActionRow">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="vexpand">False</property>
+            <property name="title" translatable="yes">Skip rows</property>
+            <property name="subtitle" translatable="yes">How many rows to skip while loading data</property>
+            <property name="use-underline">True</property>
             <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Decimal separator</property>
-                <property name="subtitle" translatable="yes">The character that is used as a decimal separator</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="decimal seperator">
-                    <property name="text">.</property>
-                    <property name="valign">center</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Column X</property>
-                <property name="subtitle" translatable="yes">Which column to load for the X-data</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkSpinButton" id ="column_x">
-            <property name="vexpand">False</property>
-            <property name="vexpand-set">False</property>
-            <property name="adjustment">spin_button_column_x</property>
-            <property name="numeric">True</property>
-            <property name="value">0</property>
-            <property name="wrap">True</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-            <property name="vexpand">False</property>
-                <property name="title" translatable="yes">Column Y</property>
-                <property name="subtitle" translatable="yes">Which column to load for the Y-data</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkSpinButton" id ="column_y">
-            <property name="vexpand">False</property>
-            <property name="adjustment">spin_button_column_y</property>
-            <property name="numeric">True</property>
-            <property name="value">1</property>
-            <property name="wrap">True</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-            <property name="vexpand">False</property>
-                <property name="title" translatable="yes">Skip rows</property>
-                <property name="subtitle" translatable="yes">How many rows to skip while loading data</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkSpinButton" id ="skip_rows">
-            <property name="vexpand">False</property>
-            <property name="adjustment">spin_button_skip_rows</property>
-            <property name="numeric">True</property>
-            <property name="value">1</property>
-            <property name="wrap">True</property>
-                  </object>
-                </child>
+              <object class="GtkSpinButton" id ="skip_rows">
+                <property name="vexpand">False</property>
+                <property name="adjustment">spin_button_skip_rows</property>
+                <property name="numeric">True</property>
+                <property name="value">1</property>
+                <property name="wrap">True</property>
               </object>
             </child>
           </object>
-          </child>
-      </child>
-     </object>
+        </child>
+      </object>
     </child>
   </template>
 </interface>
