--- a/src/sample_box.ui
+++ b/src/sample_box.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
+  <requires lib="libadwaita" version="1.2" />
   <template class="SampleBox" parent="GtkBox">
     <child>
       <object class="GtkBox" id="sample_box">
