--- a/src/add_equation_window.ui
+++ b/src/add_equation_window.ui
@@ -34,88 +34,53 @@
             <property name="margin-top">20</property>
             <property name="margin-bottom">20</property>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="name_entry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Name</property>
-                <property name="subtitle" translatable="yes">The name that is to be used for the data set</property>
+                <property name="title" translatable="yes">Name (blank to use equation)</property>
+                <!--property name="subtitle" translatable="yes">The name that is to be used for the data set</property!-->
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="name_entry">
-                    <property name="placeholder-text">Leave blank to use equation</property>
-                    <property name="valign">center</property>
-                    <property name="max-width-chars">25</property>
-                    <property name="width-request">15</property>
-                  </object>
-                </child>
+                <property name="max-width-chars">25</property>
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="equation_entry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">Y =</property>
-                <property name="subtitle" translatable="yes">The equation that is used to generate data</property>
+                <!--property name="subtitle" translatable="yes">The equation that is used to generate data</property!-->
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="equation_entry">
-                    <property name="text">X</property>
-                    <property name="valign">center</property>
-                    <property name="max-width-chars">25</property>
-                    <property name="width-request">15</property>
-                  </object>
-                </child>
+                <property name="max-width-chars">25</property>
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="X_start_entry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">X Start</property>
-                <property name="subtitle" translatable="yes">The starting coordinate for the X axis</property>
+                <!--property name="subtitle" translatable="yes">The starting coordinate for the X axis</property!-->
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="X_start_entry">
-                    <property name="text">0</property>
-                    <property name="valign">center</property>
-                    <property name="max-width-chars">25</property>
-                    <property name="width-request">15</property>
-                  </object>
-                </child>
+                <property name="max-width-chars">25</property>
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="X_stop_entry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">X Stop</property>
-                <property name="subtitle" translatable="yes">The ending coordinate for the X axis</property>
+                <!--property name="subtitle" translatable="yes">The ending coordinate for the X axis</property!-->
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="X_stop_entry">
-                    <property name="text">10</property>
-                    <property name="valign">center</property>
-                    <property name="max-width-chars">25</property>
-                    <property name="width-request">15</property>
-                  </object>
-                </child>
+                <property name="max-width-chars">25</property>
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="step_size_entry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">Step Size</property>
-                <property name="subtitle" translatable="yes">The step size to be used</property>
+                <!--property name="subtitle" translatable="yes">The step size to be used</property!-->
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="step_size_entry">
-                    <property name="text">0.01</property>
-                    <property name="valign">center</property>
-                    <property name="max-width-chars">25</property>
-                    <property name="width-request">15</property>
-                  </object>
-                </child>
+                <property name="max-width-chars">25</property>
               </object>
             </child>
             <child>
