--- a/src/add_data_advanced.ui
+++ b/src/add_data_advanced.ui
@@ -34,55 +34,39 @@
             <property name="margin-top">20</property>
             <property name="margin-bottom">20</property>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="name">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Name</property>
-                <property name="subtitle" translatable="yes">The name that is to be used for the data set (single file only)</property>
-                <child>
-                  <object class="GtkEntry" id="name">
-                    <property name="placeholder-text">Leave blank to use filename</property>
-                    <property name="max-width-chars">10</property>"
-                    <property name="valign">center</property>
-                  </object>
-                </child>
+                <property name="title" translatable="yes">Name (single file only)</property>
+                <!--property name="subtitle" translatable="yes">The name that is to be used for the data set (single file only)</property!-->
+                <property name="max-width-chars">10</property>""
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwEntryRow" id="delimiter">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Delimiter</property>
-                <property name="subtitle" translatable="yes">The delimiter that separates the columns (\s+ for whitespace)</property>
+                <property name="title" translatable="yes">Delimiter (\s+ for whitespace)</property>
+                <!--property name="subtitle" translatable="yes">The delimiter that separates the columns (\s+ for whitespace)</property!-->
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkEntry" id="delimiter">
-                    <property name="max-width-chars">10</property>"
-                    <property name="valign">center</property>
-                  </object>
-                </child>
+                <property name="max-width-chars">10</property>""
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwComboRow" id="separator">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">Decimal Separator</property>
                 <property name="subtitle" translatable="yes">The character that is used as decimal separator</property>
                 <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkDropDown" id="separator">
-                    <property name="valign">center</property>
-                    <property name="model">
-                      <object class="GtkStringList">
-                        <items>
-                          <item translatable="yes">.</item>
-                          <item translatable="yes">,</item>
-                        </items>
-                      </object>
-                    </property>
+                <property name="model">
+                  <object class="GtkStringList">
+                    <items>
+                      <item translatable="yes">.</item>
+                      <item translatable="yes">,</item>
+                    </items>
                   </object>
-                </child>
+                </property>
               </object>
             </child>
             <child>
