Fixed Y_position options
Y_position options were top/bottom, meaning it tried to plot the Y-data on the X-axes. Fixed it now.

--- a/src/preferences.ui
+++ b/src/preferences.ui
@@ -392,8 +392,8 @@
                 <property name="model">
                   <object class="GtkStringList">
                     <items>
-                      <item translatable="yes">top</item>
-                      <item translatable="yes">bottom</item>
+                      <item translatable="yes">left</item>
+                      <item translatable="yes">right</item>
                     </items>
                   </object>
                 </property>
@@ -809,5 +809,3 @@
     </object>
   </template>
 </interface>
-
-
